Add more demos for various stuffs

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -25,7 +25,9 @@
     <form action="" method="post">
         <h2>Instant-upload test</h2>
         <div>
-            <a name="file" id="neat_instant">Upload</a>
+            <a class="uploader" name="file" id="neat_instant_success">Success</a>
+            <a class="uploader" name="file" id="neat_instant_error">Fail</a>
+            <a class="uploader" name="file" id="neat_instant_jpeg">JPEG only</a>
         </div>
     </form>
 
