--- a/demo/demo.html
+++ b/demo/demo.html
@@ -7,7 +7,7 @@
         <meta http-equiv="content-style-type" content="text/css"/>
         <link rel="stylesheet" type="text/css" media="all" href="demo.css"/>
         <script type="text/javascript" src="jquery-1.4.3.min.js"></script>
-        <script type="text/javascript" src="../jquery.instantupload.js"></script>
+        <script type="text/javascript" src="../jquery.instantupload-0.1.js"></script>
         <script type="text/javascript" src="demo.js"></script>
         <title>Demo</title>
     </head>
